Make sure nsk debugger tests launch the debuggee with --enable-preview
Reviewed-by: lmesnik